# merise_dot

./: .gitignore  CONTRIBUTING.md  README.md  checks.nix  default.nix  flake.nix  justfile  merise_dot.srctrlprj  mkdocs.yml  nix  pyproject.toml
.github/workflows/: tests.yml
docs/: foreignkeys.md  mcd.md  mld.md  quickstart.md  sql.md  sql_tables.md  unique.md
features/: README.md  constraints.feature  dot.feature  entity.feature  graph.feature  links.feature  mld.feature  sql.feature
features/assets/: MySQL_fk_msql_t.sql  mdot.sql  mgraph.sql  t2.sql  t3.sql  test.sql
features/assets/constraints/: MySQL_test_unq.sql
features/assets/tables/: sqt.sql  sqt2.sql  sqt3.sql  sqt4.sql  sqt5.sql  sqt6.sql  sqtest1.sql
features/steps/: constraints.py  dot.py  entity.py  graph.py  links.py  mld.py  sql.py
features/steps/aux/: __init__.py  core.py  script.py
merise/: __init__.py
merise_dot/: __init__.py
merise_dot/commands/: __init__.py  mcd.py
merise_dot/commands/mcd/: __init__.py  edit.py
merise_dot/commands/mcd/ops/: __init__.py  en_add.py  en_del.py  en_edt.py  en_lk.py  exit.py  gr_save.py  lk_add.py  lk_del.py  lk_edt.py  scheme.py
merise_dot/commands/mcd/ops/fields/: __init__.py  fd_add.py  fd_del.py  fd_edt.py
merise_dot/commands/mcd/ops/links/: __init__.py  lk_addcard.py  lk_addfield.py  lk_delcard.py  lk_delfield.py  lk_edt.py  lk_edtcard.py  lk_edtfield.py  lk_extra.py  lk_rm.py
merise_dot/dot/: __init__.py  lkt.py  mkmcd.py  mkmld.py  mkrt.py  script.py
merise_dot/model/: __init__.py  graph.py
merise_dot/model/mcd/: __init__.py  entity.py  links.py
merise_dot/model/mld/: entity.py  graph.py
merise_dot/scripts/: __init__.py  constraints.py  core.py  cstr_type.py
merise_dot/scripts/cstr/: __init__.py  fk.py  unq.py
merise_dot/scripts/mysql/: __init__.py  core.py
merise_dot/scripts/table/: __init__.py  field.py  table.py  tft.py
merisedot/: __init__.py
merisedot/commands/: mcd.py
merisedot/model/: __init__.py  errors.py  graph.py
merisedot/model/mcd/: entity.py  errors.py  links.py
