[project]
name = "merisedot"
description = "Python port of the merisedot script"
readme = "README.md"
classifiers = [
    "Intended Audience::Developers",
    "Programming Language::Python::3"
]

dynamic = [ "version" ]
requires-python = ">=3.8"
dependencies = [ "rich", "click" ]

[[project.authors]]
name = "kheldae"
email = "taho.gougeon@gmail.com"

[project.optional-dependencies]
test = [ "behave" ]

[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project.scripts]
"merise-dot" = "merisedot:main"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [ 'current_version = "{version}"' ]
"merise/__init__.py" = [ '__version__ = "{version}"' ]
"default.nix" = [ 'merisedot_version = "{version}"' ]

[tool.yapf]
based_on_style = "pep8"
indent_width = 4
spaces_before_comment = 1
split_before_arithmetic_operator = true
split_before_dot = true
split_before_first_argument = true
use_tabs = false
