[project]
name = "merise_dot"
description = "Python port of the merisedot script"
readme = "README.md"
dynamic = [ "version" ]
requires-python = ">=3.8"
dependencies = [
    "click", "questionary", # CLI tools
    "graphviz", # graph rendering
    "pzp" # selector
]

[[project.authors]]
name = "kheldae"
email = "taho.gougeon@gmail.com"

[project.optional-dependencies]
test = [ "behave" ]

[build-system]
requires = [ "hatchling", "hatch-build-scripts" ]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "merise_dot/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [ "merise_dot" ]

[project.scripts]
"merise_dot" = "merise_dot:main"

[tool.bumpver]
current_version = "1.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [ 'current_version = "{version}"' ]
"merise_dot/__init__.py" = [ '__version__ = "{version}"' ]
"default.nix" = [ 'merisedot_version = "{version}"' ]

[tool.yapf]
based_on_style = "pep8"
indent_width = 4
spaces_before_comment = 1
split_before_arithmetic_operator = true
split_before_dot = true
split_before_first_argument = true
use_tabs = false
